	create posts ahead of current datetime)
	- Permit user to choose a compression tool and a compression extension for
	backups
	- Also backup theme choosen by the user in the makefly.rc file
	- Fix bug on carriage return
	- Some minisch theme improvements
	- Documentation appearance improvements
	- Update translation
	- New theme: Responsive

Version 0.1.1 (release 2013-01-17)
	- Permit user to choose page ' suffix
	- Permit user to choose index filenames
	- Complete README file
	- Some HTML5 improvements
	- Fix but when reusing pmake without pmake clean
	- Add a "About"'s page
	- Add some missing variables in documentation
	- Complete documentation for installation via current version or developement
	  version. More information for dependancies installation.
	- Templating improvements in order to create more templates and cascading
	  stylesheets
	- Backup command to save all important files from Makefly
	- French documentation is now available
	- Add post title on each post
	- Add some text on tag list
	- Add new theme: minisch
	- Permit to use ${VARIABLE} in CSS
	- Fix a bug that show twice post list for a given tag
	- Sidebar added
	- Improve doc generation
	- Migrate tools in a "tools" directory
	- Publish command with a script that send result by rsync using SSH
	- 'Read more' function: you can choose how many lines to display for each post
	  on homepage.
	- Search bar added
	- Fix bug on articles that have similar names
	- Add a KNOWN_ISSUE file to give known errors
	- Fix a bug on ` chars
	- Delete some useless variable in Makefile
	- Add charset in RSS
	- Add AUTHOR as a new metadata for each post
	- BLOG_SHORT_DESC is now used as a kind of second title for blog title
	- Limit RSS number with MAX_RSS
	- Add content of post in RSS file
	- Minisch theme improvements: date, escaped_title, labels for each post, etc.
	- Add datetime as new value
	- Add CSS that permit to define a printing version of the weblog (for
	  default theme and minisch theme)