@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="${LANG}" lang="${LANG}" dir="ltr">
 <head>
   <meta charset="${BLOG_CHARSET}" />
+  <meta name="generator" content="Makefly ${VERSION}" />
   <title>${BLOG_TITLE} - ${TITLE}</title>
   <link rel="stylesheet" type="text/css" media="all" href="${BASE_URL}/${JSKOMMENT_CSS}">
   <link rel="stylesheet" type="text/css" media="all" href="${BASE_URL}/${ELI_CSS}">
