@@ -14,6 +14,7 @@
 
 <head>
   <meta charset="${BLOG_CHARSET}">
+  <meta name="generator" content="Makefly ${VERSION}">
   <meta name="viewport" content="width=device-width">
   <title>${BLOG_TITLE} - ${TITLE}</title>
   <meta name="description" content="${BLOG_DESCRIPTION}">
