@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="${BLOG_CHARSET}">
+        <meta name="generator" content="Makefly ${VERSION}" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>${BLOG_TITLE} - ${TITLE}</title>
         <meta name="description" content="">
