@@ -19,6 +19,7 @@ Current (0.2-dev)
 	- Documentation appearance improvements
 	- Update translation
 	- New theme: Responsive
+	- Add "generator" meta tag to all templates
 
 Version 0.1.1 (release 2013-01-17)
 	- Permit user to choose page ' suffix
